--- a/components/Footer/footer.module.css
+++ b/components/Footer/footer.module.css
@@ -1,8 +1,8 @@
 .footer {
-    position: relative;
+    position: absolute;
     text-align: center;
     bottom: 0;
-    width: 100%;
+    width: 98%;
     height: 2.5rem;
   }
   
@@ -10,3 +10,4 @@
     color: #938f8f;
     font-size: 18px;
   }
+
