--- a/components/app.module.css
+++ b/components/app.module.css
@@ -1,5 +1,7 @@
 .body { 
     background-color: #fafafa;
     background-image: linear-gradient(#063958, #fafafa);
-    margin: -8px
+    margin: -8px;
+    position: relative;
+    min-height: 100vh;
 }
